--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="size_in_kb">%1$.2f KB</string>
     <string name="size_in_mb">%1$.2f MB</string>
     <string name="size_in_gb">%1$.2f GB</string>
+    <string name="_00_00_00">00:00</string>
 </resources>
